# homebrew-file

./: .gitignore  .mise.toml  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  .travis.yml.old  .travis_rsa.enc  .travis_rsa.tar.enc  .travis_rsa_python.enc  .travis_rsa_python3.enc  BrewfileExt  BrewfileHome  BrewfileTest  CHANGELOG.md  LICENSE  README.DETAILS.md  README.MORE.md  README.md  README.old.md  brew-file.rb  brewall.rb  combine.sh  install.sh  pyproject.toml  pyvtest.py  pyvtest2.py  renovate.json  test.sh
.github/: FUNDING.yml  dependbot.yml
.github/actions/pristine-homebrew/: action.yml
.github/actions/setup-homebrew/: action.yml
.github/workflows/: check.yml  codeql-analysis.yml  dispatch.yml  linter.yml  ossar-analysis.yml  shiftleft-analysis.yml  test.yml  tmate.yml  trigger.yml
cmd/: brew-file
docs/: BrewFile.py  Makefile  brew-wrap.rst  brew_file.py  completion.rst  conf.py  development.rst  getting_started.rst  help.rst  homebrew-file.rst  index.rst  installation.rst  make.bat  mytest.py  requirements.rst  requirements.txt  rtfd-requirements.txt  settings.rst  usage.rst
etc/: brew-wrap  brew-wrap.fish
etc/bash_completion.d/: brew-file
share/zsh/site-functions/: _brew-file
src/brew_file/: __init__.py  brew_file.py  brew_helper.py  brew_info.py  info.py  main.py  utils.py
test/: BrewfileHome  BrewfileTest
tests/: conftest.py  test_brew_file.py  test_brew_helper.py  test_brew_info.py  test_destructive.py  test_functions.py  test_open_wrapper.py  test_print.py  test_serial.py  test_tee.py  test_utils.py  test_version.py
tests/files/: BrewfileExt  BrewfileExt2  BrewfileMain  BrewfileTest  BrewfileTestLinux
tests/scripts/: clean_homebrew.sh  destructive_test.sh  lume.sh  proc_env_test.sh  serial_test.sh  test_editor.sh
